# interplot

./: .gitignore  MANIFEST.in  Makefile  README.md  accelerate.py  arraytools.py  color.py  convert.py  datetimeparser.py  filters.py  interplot_minimal.py  janjo-v0-0.mplstyle  matplotlib_automation.py  minimalize.py  minimize.py  parse_datetime.py  pyproject.toml  readme_dev.md  requirements-dev.txt  requirements.txt  setup.py  sum_nested.py
demo/: dev_playground.ipynb  toolbox.datetimeparser.ipynb  toolbox.ipynb
demo/exports/: signal_plotly.html
docs/: .buildinfo  CNAME  api.html  api_conf.html  api_debug.html  api_iter.html  api_plot.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_sources/: api.rst.txt  api_conf.rst.txt  api_debug.rst.txt  api_iter.rst.txt  api_plot.rst.txt  index.rst.txt
docs/_static/: basic_plot_pty.html  gauss_plot_pty.html
interplot/: .gitattributes  __init__.py  arraytools.py  conf.py  debug.py  iter.py  plot.py
source/: api_conf.rst  api_iter.rst  api_plot.rst  conf.py  index.rst
source/_static/: mobile.css  mobile.js
source/plot_examples/: Everything-Under-Control.html  basic_plot_pty.html  default_sin.html  gauss_plot_pty.html
tests/: datetimeparser_test.py  debug_test.py  iter_test.py  plot_test.py
toolbox/: LICENCE.txt  __init__.py  accelerate.py  arraytools.py  color.py  convert.py  datetimeparser.py  gauss.py  iter.py  matplotlib_automation.py  plot.py
