[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tools.setuptools]

[tool.black]
line-length = 79
extend-exclude = '''
interplot_minimal.py
'''

[tool.flake8]
exclude = [
    # No need to traverse our git directory
    ".git",
    ".venv",
    "playground",
    "interplot_minimal.py",
    # There's no value in checking cache directories
    "__pycache__"
]
# Use extend-ignore to add to already ignored checks which are anti-patterns like W503.
extend-ignore = [
    # PEP 8 recommends to treat : in slices as a binary operator with the lowest priority, and to leave an equal
    # amount of space on either side, except if a parameter is omitted (e.g. ham[1 + 1 :]).
    # This behaviour may raise E203 whitespace before ':' warnings in style guide enforcement tools like Flake8.
    # Since E203 is not PEP 8 compliant, we tell Flake8 to ignore this warning.
    # https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html#slices    
    "E203"
]
